// Vitest Snapshot v1

exports[`test merge object 1`] = `
{
  "feature": "pnpm run dev --port:300",
}
`;

exports[`test merge object 2`] = `
{
  "aa": "pnpm run dev",
  "feature": "pnpm run dev --port:300",
}
`;

exports[`test merge object 3`] = `
{
  "aa": "pnpm run dev",
  "feature": "pnpm run dev --port:300",
}
`;

exports[`test read package.json 1`] = `
{
  "author": "",
  "description": "",
  "keywords": [],
  "license": "ISC",
  "main": "index.js",
  "name": "feature",
  "scripts": {
    "test": "echo \\"Error: no test specified\\" && exit 1",
  },
  "version": "1.0.0",
}
`;

exports[`test read package.json 2`] = `
{
  "author": "",
  "description": "",
  "keywords": [],
  "license": "ISC",
  "main": "index.js",
  "name": "feature",
  "scripts": {
    "test": "echo \\"Error: no test specified\\" && exit 1",
  },
  "version": "1.0.0",
}
`;
